[gd_scene load_steps=2 format=3 uid="uid://dqokp0l68nkol"]

[ext_resource type="Script" path="res://scripts/components/DebugOverlay.gd" id="1_8n2kw"]

[node name="DebugOverlay" type="CanvasLayer"]
script = ExtResource("1_8n2kw")

[node name="ToggleButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_bottom = 30.0
text = "Debug"

[node name="DebugPanel" type="Panel" parent="."]
offset_left = 10.0
offset_top = 50.0
offset_right = 360.0
offset_bottom = 450.0

[node name="VBoxContainer" type="VBoxContainer" parent="DebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="DebugPanel/VBoxContainer"]
layout_mode = 2
text = "Debug Information"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="DebugLabel" type="RichTextLabel" parent="DebugPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Debug information will appear here..."
fit_content = true
